--- a/package.json
+++ b/package.json
@@ -11,41 +11,41 @@
   "author": "chris--jones",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~4.4.0",
-    "@angular/compiler": "~4.4.0",
-    "@angular/core": "~4.4.0",
-    "@angular/forms": "~4.4.0",
-    "@angular/http": "~4.4.0",
-    "@angular/platform-browser": "~4.4.0",
-    "@angular/platform-browser-dynamic": "~4.4.0",
-    "@angular/router": "~4.4.0",
-    "core-js": "^2.5.1",
-    "rxjs": "^5.0.1",
-    "zone.js": "^0.8.17"
+    "@angular/common": "5.1.1",
+    "@angular/compiler": "5.1.1",
+    "@angular/core": "5.1.1",
+    "@angular/forms": "5.1.1",
+    "@angular/http": "5.1.1",
+    "@angular/platform-browser": "5.1.1",
+    "@angular/platform-browser-dynamic": "5.1.1",
+    "@angular/router": "5.1.1",
+    "core-js": "2.5.3",
+    "rxjs": "5.5.5",
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.5.36",
-    "@types/node": "^6.0.88",
+    "@types/jasmine": "2.8.2",
+    "@types/node": "8.5.1",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.2.3",
-    "css-loader": "^0.26.4",
-    "extract-text-webpack-plugin": "^2.0.0-beta.5",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.5",
+    "awesome-typescript-loader": "3.4.1",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "html-loader": "0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.0",
+    "karma-jasmine": "1.1.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.4",
+    "karma-webpack": "2.0.9",
     "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "style-loader": "^0.13.2",
-    "typescript": "^2.3.4",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-merge": "^3.0.0"
+    "style-loader": "0.19.1",
+    "typescript": "2.6.2",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.9.7",
+    "webpack-merge": "4.1.1"
   }
 }
