--- a/package.json
+++ b/package.json
@@ -11,41 +11,42 @@
   "author": "chris--jones",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "5.2.5",
-    "@angular/compiler": "5.2.5",
-    "@angular/core": "5.2.5",
-    "@angular/forms": "5.2.5",
-    "@angular/http": "5.2.5",
-    "@angular/platform-browser": "5.2.5",
-    "@angular/platform-browser-dynamic": "5.2.5",
-    "@angular/router": "5.2.5",
-    "core-js": "2.5.3",
-    "rxjs": "5.5.6",
-    "zone.js": "0.8.20"
+    "@angular/common": "8.2.11",
+    "@angular/compiler": "8.2.11",
+    "@angular/core": "8.2.11",
+    "@angular/forms": "8.2.11",
+    "@angular/http": "7.2.15",
+    "@angular/platform-browser": "8.2.11",
+    "@angular/platform-browser-dynamic": "8.2.11",
+    "@angular/router": "8.2.11",
+    "core-js": "3.3.2",
+    "rxjs": "6.5.3",
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@types/jasmine": "2.8.6",
-    "@types/node": "9.4.6",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "3.4.1",
-    "css-loader": "0.28.9",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
+    "@types/jasmine": "3.4.4",
+    "@types/node": "12.11.1",
+    "angular2-template-loader": "0.6.2",
+    "awesome-typescript-loader": "5.2.1",
+    "css-loader": "3.2.0",
+    "file-loader": "4.2.0",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "^2.30.1",
-    "jasmine-core": "^2.8.0",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "1.1.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "2.0.9",
-    "null-loader": "^0.1.1",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.2",
-    "style-loader": "0.20.2",
-    "typescript": "2.7.2",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1",
-    "webpack-merge": "4.1.1"
+    "html-webpack-plugin": "3.2.0",
+    "jasmine-core": "3.5.0",
+    "karma": "4.4.1",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-jasmine": "2.0.1",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "4.0.2",
+    "mini-css-extract-plugin": "0.8.0",
+    "null-loader": "3.0.0",
+    "raw-loader": "3.1.0",
+    "rimraf": "3.0.0",
+    "style-loader": "1.0.0",
+    "typescript": "3.6.4",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.9",
+    "webpack-dev-server": "3.8.2",
+    "webpack-merge": "4.2.2"
   }
 }
