--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "webpack-starter",
-  "version": "1.0.0",
-  "description": "Webpack starter",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080",
-    "test": "karma start",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
-  },
-  "author": "chris--jones",
-  "license": "MIT",
-  "dependencies": {
-    "@angular/common": "8.2.11",
-    "@angular/compiler": "8.2.11",
-    "@angular/core": "8.2.11",
-    "@angular/forms": "8.2.11",
-    "@angular/http": "7.2.15",
-    "@angular/platform-browser": "8.2.11",
-    "@angular/platform-browser-dynamic": "8.2.11",
-    "@angular/router": "8.2.11",
-    "core-js": "3.3.2",
-    "rxjs": "6.5.3",
-    "zone.js": "0.10.2"
-  },
-  "devDependencies": {
-    "@types/jasmine": "3.4.4",
-    "@types/node": "12.11.1",
-    "angular2-template-loader": "0.6.2",
-    "awesome-typescript-loader": "5.2.1",
-    "css-loader": "3.2.0",
-    "file-loader": "4.2.0",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
-    "jasmine-core": "3.5.0",
-    "karma": "4.4.1",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-jasmine": "2.0.1",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "4.0.2",
-    "mini-css-extract-plugin": "0.8.0",
-    "null-loader": "3.0.0",
-    "raw-loader": "3.1.0",
-    "rimraf": "3.0.0",
-    "style-loader": "1.0.0",
-    "typescript": "3.6.4",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.2",
-    "webpack-merge": "4.2.2"
-  }
+    "name": "webpack-starter",
+    "version": "1.0.0",
+    "description": "Webpack starter",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack-dev-server --port 8080",
+        "test": "karma start",
+        "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
+    },
+    "author": "chris--jones",
+    "license": "MIT",
+    "dependencies": {
+        "@angular/common": "11.0.5",
+        "@angular/compiler": "11.0.5",
+        "@angular/core": "11.0.5",
+        "@angular/forms": "11.0.5",
+        "@angular/platform-browser": "11.0.5",
+        "@angular/platform-browser-dynamic": "11.0.5",
+        "@angular/router": "11.0.5",
+        "core-js": "3.8.1",
+        "rxjs": "6.6.3",
+        "zone.js": "0.11.3"
+    },
+    "devDependencies": {
+        "@types/jasmine": "3.6.2",
+        "@types/node": "14.14.16",
+        "angular2-template-loader": "0.6.2",
+        "awesome-typescript-loader": "5.2.1",
+        "css-loader": "5.0.1",
+        "file-loader": "6.2.0",
+        "html-loader": "1.3.2",
+        "html-webpack-plugin": "4.5.0",
+        "jasmine-core": "3.6.0",
+        "karma": "5.2.3",
+        "karma-chrome-launcher": "3.1.0",
+        "karma-jasmine": "4.0.1",
+        "karma-sourcemap-loader": "0.3.8",
+        "karma-webpack": "4.0.2",
+        "mini-css-extract-plugin": "1.3.3",
+        "null-loader": "4.0.1",
+        "raw-loader": "4.0.2",
+        "rimraf": "3.0.2",
+        "style-loader": "2.0.0",
+        "terser-webpack-plugin": "5.0.3",
+        "typescript": "4.1.3",
+        "webpack": "5.11.0",
+        "webpack-cli": "4.3.0",
+        "webpack-dev-server": "4.0.0-beta.0",
+        "webpack-merge": "5.7.3"
+    }
 }
